# ragcitecheck

./: .gitignore  LICENSE  README.md  canonicalize.py  cli.py  pyproject.toml  report.py  requirements.txt
examples/golden/: readme.txt
examples/golden/mappings/: doc_id_map.csv
examples/golden/runs/: run1.jsonl  run2.jsonl
out_check/: instability_examples.md  per_query_stability.csv  report_meta.json  run_quality.csv  validation_summary.json
out_report/: instability_examples.md  pairwise_config_stability.csv  per_query_stability.csv  report_meta.json
out_validate/: validation_summary.json
ragcitecheck/: canonicalize.py  cli.py  metrics.py  report.py  validate.py
ragcitecheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/fixtures/runs_min/: runA.jsonl  runB.jsonl
