[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcitecheck"
version = "0.1.0"
description = "Document-level citation stability diagnostics for RAG systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ragcitecheck = "ragcitecheck.cli:main"
[tool.setuptools]
packages= ["ragcitecheck"]